--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
-<div class="auther">
-    <h1 class="author_heading">Sichangi here</h1> 
-    <p class="author_body">Software engineer</p> 
+<div class="author">
+    <h1 class="author__heading">Sichangi here</h1> 
+    <p class="author__body">Software engineer</p> 
 </div>
 
-<img src="/img/profile.jpg" alt="author image" class="hero_image" width="981" height="528"/>
+<img src="/img/profile.jpg" alt="author image" class="hero__image" width="981" height="528"/>
 
 <section class="articles">
-    <h2 class="articles_heading">Latest Posts</h2>   
-    <ul class="article_ul">
+    <h2 class="articles__heading">Latest Posts</h2>   
+    <ul class="article-ul">
         <li><a href="#">
             <span>Post Title</span>
-            <span class="article-list_date">Post Date</span>
+            <span class="article-list__date">Post Date</span>
         </a></li>
     </ul>
 
