--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -9,8 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <%- include('../partials/search.ejs') %>
     <div class="container"> 
-        <%- include('../partials/header.ejs') %>
+        <%- include('../partials/header.ejs') %>s
         <main class="main"><%- body %></main>
         <%- include('../partials/footer.ejs') %>
     </div>
